# my-slackbot

./: .gitignore  README.md  my-slackbot.cabal  stack.yaml
app/: Main.hs
src/: Echo.hs
