name:                my-slackbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tatsuki-I/my-slackbot#readme
license:             BSD3
license-file:        LICENSE
author:              Tatsuki-I
maintainer:          tatsuki.devel@gmail.com
copyright:           2017 Tatsuki-I
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Profile
                     , Echo
  build-depends:       base >= 4.7 && < 5
                     , slack-api
  default-language:    Haskell2010

executable slackbot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-slackbot
                     , slack-api
  default-language:    Haskell2010

test-suite my-slackbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-slackbot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tatsuki-I/my-slackbot
